bdr.BDR2.scala.error
Erreur de compilation :
BDR2:1: error: not found: value msg
msg=""
^BDR2:4: error: not found: value msg
  msg=litMessage
  ^BDR2:5: error: not found: value msg
  msg match{
  ^